fixed overflow of modal card

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -14,6 +14,8 @@
     left: 0;
     bottom: 0;
     right: 0;
+    overflow-y: auto;
+
     // background-color: rgba(255, 255, 255, 0.01);
     background-color: rgba(0, 0, 0, 0.4);
     // background-color: black;
@@ -27,24 +29,38 @@
     max-width: 50rem;
     max-height: 70rem;
     display: grid;
-    // justify-items: center;
-    // align-items: center;
+    justify-items: center;
+    // position: relative;
+
+    // &::after {
+    //   position: absolute;
+    //   top: 3px;
+    //   left: 3px;
+    //   content: "";
+    //   width: 100%;
+    //   height: 100%;
+    //   border-radius: 5px;
+    //   background-color: var(--color-yellow);
+    //   // transform: translateX(3rem);
+    //   z-index: var(--z-index-negative);
+    // }
 
     @media screen and (min-width: 720px) {
       // max-width: 50rem;
-      max-height: 80rem;
+      // max-height: 80rem;
     }
     @media screen and (min-width: 1200px) {
-      // width: 30%;
+      max-width: 45rem;
     }
   }
 
   &__card {
     display: grid;
+    max-width: inherit;
     // grid-gap: 0.5rem;
     background-color: var(--color-yellow);
     background-color: var(--color-primary--light);
-    box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.55);
     // border: 1px solid #feb300;
     // width: 98%;
     // max-width: 650px;
@@ -52,15 +68,20 @@
     padding: 0.3rem;
     border-radius: 5px;
     // font-size: var(--fs-300);
-    font-size: 1.7rem;
-    transform-style: preserve-3d;
-    transform: perspective(1000px);
+    font-size: var(--fs-200);
+
     // position: relative;
 
     // & .dog__caption h3 {
     //   justify-self: center;
     //   transform: translateZ(1.5rem);
     // }
+
+    @media screen and (min-width: 1200px) {
+      // max-width: 45rem;
+      transform-style: preserve-3d;
+      transform: perspective(1000px);
+    }
 
     a {
       // color: pink;
@@ -71,7 +92,7 @@
     }
 
     & .dog__image {
-      height: 30rem;
+      height: 27rem;
       background-position: center;
       background-size: cover;
       // scale: 2.5;
@@ -129,11 +150,8 @@
   }
 
   &__button {
-    // position: absolute;
-    right: -5rem;
-    // width: fit-content;
     justify-self: end;
-    font-size: 3rem;
-    margin-bottom: 1rem;
+    align-self: start;
+    font-size: var(--fs-500);
   }
 }
