--- a/src/scss/sections/_list.scss
+++ b/src/scss/sections/_list.scss
@@ -170,7 +170,7 @@
   }
 
   &__heart {
-    font-size: var(--fs-400);
+    font-size: var(--fs-500);
     // margin-left: auto;
     // position: absolute;
     // bottom: -0.5rem;
